apps/media/maintainerr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: maintainerr
    part-of: media
  name: maintainerr
spec:
  serviceName: maintainerr
  replicas: 1
  selector:
    matchLabels:
      app: maintainerr
      part-of: media
  template:
    metadata:
      labels:
        app: maintainerr
        part-of: media
    spec:
      containers:
        - image: jorenn92/maintainerr:2.15.0
          imagePullPolicy: IfNotPresent
          name: maintainerr
          volumeMounts:
            - mountPath: /opt/data
              name: maintainerr-config
          ports:
            - name: maintainerr
              containerPort: 6246
              protocol: TCP
      volumes:
        - name: maintainerr-config
          persistentVolumeClaim:
            claimName: media-maintainerr-config
      restartPolicy: Always
