apps/media/maintainerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
  labels:
    app: maintainerr
    part-of: media
spec:
  selector:
    app: maintainerr
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: maintainerr
