apps/media/maintainerr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maintainerr
  labels:
    app.kubernetes.io/name: maintainerr
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
  annotations:
    external-dns.alpha.kubernetes.io/hostname: maintainerr.home.8none1.com
    external-dns.alpha.kubernetes.io/target: traefik.srv.8none1.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`maintainerr.home.8none1.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: maintainerr
          port: http
      middlewares:
        - name: authentik-forward-auth
  tls:
    secretName: maintainerr-ingress-tls
